[package]
name = "tjq"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.30"
clap_derive = "4.5.28"
itertools = "0.13.0"
log = "0.4.25"
serde_json = "1.0.139"
topological-sort = "0.2.2"
trace = "0.1.7"
tracing-subscriber = "0.3.19"
tree-sitter =  "0.25.2"
tree-sitter-jq = "1.0.2"