[package]
name = "tjq"
description = "tjq is a typed jq implementation in Rust that uses a prototype type inference engine, requiring no type annotations."
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.30"
clap_derive = "4.5.28"
itertools = "0.13.0"
log = "0.4.25"
serde_json = "1.0.139"
topological-sort = "0.2.2"
trace = "0.1.7"
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tree-sitter =  "0.25.2"
tree-sitter-jq = "1.0.2"
assert_cmd = "2.0"
predicates = "2.1"
