[package]
name = "tjq-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tjq-lsp"
path = "src/main.rs"

[dependencies]
tjq_exec = { path = "../tjq_exec" }
tjq = {path = "../tjq"}
tjq_parser= {path = "../tjq_parser"}

tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter =  "0.25.2"
tree-sitter-tjq = {path = "../tjq_grammar"}
tracing = "0.1"
tracing-subscriber = "0.3"