[package]
name = "tjq-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tjq-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
ropey = "1.6"
tree-sitter = "0.25"
tree-sitter-tjq = { path = "../tjq_grammar" }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
