[package]
name = "tjq_parser"
version = "0.1.0"
edition = "2021"

[lib]  # Optional unless you're customizing the lib name or path
path = "lib.rs"

[dependencies]
tjq_exec = { path = "../tjq_exec" }

anyhow = "1.0.95"
clap = "4.5.30"
clap_derive = "4.5.28"
itertools = "0.13.0"
log = "0.4.25"
serde_json = "1.0.139"
topological-sort = "0.2.2"
trace = "0.1.7"
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tree-sitter =  "0.25.2"
tree-sitter-jq = "1.0.2"
tree-sitter-tjq = {path = "../tjq_grammar"}