
[package]
name = "tjq_semantics"
version = "0.1.0"
edition = "2021"

[lib] 
path = "lib.rs"

[dependencies]
tjq_exec = { path = "../tjq_exec" }

anyhow = "1.0.95"
clap = "4.5.30"
clap_derive = "4.5.28"
itertools = "0.13.0"
log = "0.4.25"
serde_json = "1.0.139"
topological-sort = "0.2.2"
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
z3 = "0.16.0"
